--- a/dev-libs/dbus-glib/ChangeLog
+++ b/dev-libs/dbus-glib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/dbus-glib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/dbus-glib/ChangeLog,v 1.108 2012/10/10 10:22:23 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/dbus-glib/ChangeLog,v 1.109 2012/10/14 05:04:03 mattst88 Exp $
+
+  14 Oct 2012; Matt Turner <mattst88@gentoo.org> dbus-glib-0.100-r1.ebuild:
+  Stable on alpha, bug 416725.
 
 *dbus-glib-0.100-r1 (10 Oct 2012)
 
@@ -405,4 +408,3 @@
   +files/dbus-glib-introspection.patch, +metadata.xml,
   +dbus-glib-0.71.ebuild:
   Glib bindings for dbus.  Initial import
-
