--- a/app-arch/libzpaq/ChangeLog
+++ b/app-arch/libzpaq/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/libzpaq
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/libzpaq/ChangeLog,v 1.7 2012/05/24 04:33:22 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/libzpaq/ChangeLog,v 1.8 2012/10/14 07:42:17 mgorny Exp $
+
+*libzpaq-6.10 (14 Oct 2012)
+
+  14 Oct 2012; Michał Górny <mgorny@gentoo.org> +libzpaq-6.10.ebuild:
+  Version bump.
 
   24 May 2012; Mike Frysinger <vapier@gentoo.org> libzpaq-2.02a-r1.ebuild,
   libzpaq-3.00.ebuild, libzpaq-5.01.ebuild:
@@ -39,4 +44,3 @@
   05 Jan 2011; Michał Górny <mgorny@gentoo.org>
   +files/0001-Add-autotools-files.patch, +libzpaq-2.02.ebuild, +metadata.xml:
   Add a stand-alone libzpaq ebuild.
-
