--- a/app-arch/libzpaq/ChangeLog
+++ b/app-arch/libzpaq/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/libzpaq
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/libzpaq/ChangeLog,v 1.8 2012/10/14 07:42:17 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/libzpaq/ChangeLog,v 1.9 2012/10/14 07:59:21 mgorny Exp $
+
+  14 Oct 2012; Michał Górny <mgorny@gentoo.org> -libzpaq-2.02a-r1.ebuild,
+  -libzpaq-3.00.ebuild:
+  Drop ancient.
 
 *libzpaq-6.10 (14 Oct 2012)
 
