--- a/app-arch/zpaq-extras/ChangeLog
+++ b/app-arch/zpaq-extras/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/zpaq-extras
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/zpaq-extras/ChangeLog,v 1.5 2012/10/14 07:57:03 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/zpaq-extras/ChangeLog,v 1.6 2012/10/14 08:00:10 mgorny Exp $
+
+  14 Oct 2012; Michał Górny <mgorny@gentoo.org> -zpaq-extras-0_p20110106.ebuild:
+  Drop ancient.
 
 *zpaq-extras-2 (14 Oct 2012)
 
