--- a/app-arch/zpaq/ChangeLog
+++ b/app-arch/zpaq/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/zpaq
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/zpaq/ChangeLog,v 1.10 2012/10/14 07:43:22 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/zpaq/ChangeLog,v 1.11 2012/10/14 08:00:29 mgorny Exp $
+
+  14 Oct 2012; Michał Górny <mgorny@gentoo.org> -zpaq-2.05.ebuild,
+  -zpaq-3.01.ebuild:
+  Drop ancient.
 
 *zpaq-6.10 (14 Oct 2012)
 
