--- a/net-voip/telepathy-haze/ChangeLog
+++ b/net-voip/telepathy-haze/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-voip/telepathy-haze
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-haze/ChangeLog,v 1.33 2012/10/04 15:02:46 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-haze/ChangeLog,v 1.34 2012/10/16 04:49:42 blueness Exp $
+
+  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  telepathy-haze-0.6.0.ebuild:
+  stable ppc, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> telepathy-haze-0.6.0.ebuild:
   Stable for amd64, wrt bug #427544
@@ -141,4 +145,3 @@
   15 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> +metadata.xml,
   +telepathy-haze-0.2.0.ebuild:
   Initial ebuild.
-
