--- a/net-voip/telepathy-salut/ChangeLog
+++ b/net-voip/telepathy-salut/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-voip/telepathy-salut
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-salut/ChangeLog,v 1.41 2012/10/04 15:03:00 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-salut/ChangeLog,v 1.42 2012/10/16 04:50:21 blueness Exp $
+
+  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  telepathy-salut-0.8.0.ebuild:
+  stable ppc, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> telepathy-salut-0.8.0.ebuild:
   Stable for amd64, wrt bug #427544
@@ -174,4 +178,3 @@
   18 Apr 2009; Gilles Dartiguelongue <eva@gentoo.org> +metadata.xml,
   +telepathy-salut-0.3.8.ebuild:
   Initial ebuild.
-
