--- a/net-im/telepathy-logger/ChangeLog
+++ b/net-im/telepathy-logger/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/telepathy-logger
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.43 2012/10/09 23:45:42 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.44 2012/10/16 05:10:49 blueness Exp $
+
+  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  telepathy-logger-0.4.0.ebuild:
+  stable ppc, bug #427544
 
 *telepathy-logger-0.4.0-r1 (09 Oct 2012)
 
@@ -187,4 +191,3 @@
   04 Dec 2010; Pacho Ramos <pacho@gentoo.org> +telepathy-logger-0.1.7.ebuild,
   +metadata.xml:
   Add telepathy-logger as it's required by empathy-2.32.
-
