--- a/net-libs/farstream/ChangeLog
+++ b/net-libs/farstream/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/farstream
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/farstream/ChangeLog,v 1.9 2012/10/07 01:04:14 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/farstream/ChangeLog,v 1.10 2012/10/16 05:40:33 blueness Exp $
+
+  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  farstream-0.1.2-r1.ebuild:
+  stable ppc64, bug #427544
 
   07 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   farstream-0.1.2-r1.ebuild:
