--- a/net-im/gajim/ChangeLog
+++ b/net-im/gajim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gajim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.154 2012/10/07 01:16:40 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.155 2012/10/16 05:42:34 blueness Exp $
+
+  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gajim-0.15.1.ebuild:
+  stable ppc64, bug #427544
 
   07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gajim-0.15.1.ebuild:
   stable ppc64, bug #427544
