--- a/net-libs/farstream/ChangeLog
+++ b/net-libs/farstream/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/farstream
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/farstream/ChangeLog,v 1.10 2012/10/16 05:40:33 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/farstream/ChangeLog,v 1.11 2012/10/16 06:40:03 mattst88 Exp $
+
+  16 Oct 2012; Matt Turner <mattst88@gentoo.org> farstream-0.1.2-r1.ebuild:
+  Stable on alpha, bug 427544.
 
   16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   farstream-0.1.2-r1.ebuild:
