--- a/net-libs/telepathy-glib/ChangeLog
+++ b/net-libs/telepathy-glib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/telepathy-glib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-glib/ChangeLog,v 1.121 2012/10/16 04:47:22 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-glib/ChangeLog,v 1.122 2012/10/16 06:39:11 mattst88 Exp $
+
+  16 Oct 2012; Matt Turner <mattst88@gentoo.org> telepathy-glib-0.18.1.ebuild:
+  Stable on alpha, bug 427544.
 
   16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   telepathy-glib-0.18.1.ebuild:
