--- a/net-im/telepathy-logger/ChangeLog
+++ b/net-im/telepathy-logger/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/telepathy-logger
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.44 2012/10/16 05:10:49 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.45 2012/10/16 06:40:30 mattst88 Exp $
+
+  16 Oct 2012; Matt Turner <mattst88@gentoo.org> telepathy-logger-0.4.0.ebuild:
+  Stable on alpha, bug 427544.
 
   16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   telepathy-logger-0.4.0.ebuild:
