--- a/dev-ruby/ruby-gstreamer/ChangeLog
+++ b/dev-ruby/ruby-gstreamer/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-gstreamer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gstreamer/ChangeLog,v 1.55 2012/09/28 15:45:28 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gstreamer/ChangeLog,v 1.56 2012/10/16 07:00:04 graaff Exp $
+
+*ruby-gstreamer-1.1.5 (16 Oct 2012)
+
+  16 Oct 2012; Hans de Graaff <graaff@gentoo.org> +ruby-gstreamer-1.1.5.ebuild:
+  Version bump.
 
   28 Sep 2012; Samuli Suominen <ssuominen@gentoo.org>
   ruby-gstreamer-1.1.3.ebuild:
