--- a/dev-ruby/ruby-gtk2/ChangeLog
+++ b/dev-ruby/ruby-gtk2/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-gtk2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk2/ChangeLog,v 1.99 2012/09/28 15:42:51 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk2/ChangeLog,v 1.100 2012/10/16 06:53:31 graaff Exp $
+
+*ruby-gtk2-1.1.5 (16 Oct 2012)
+
+  16 Oct 2012; Hans de Graaff <graaff@gentoo.org> +ruby-gtk2-1.1.5.ebuild:
+  Version bump.
 
   28 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> ruby-gtk2-1.1.3.ebuild:
   ppc stable wrt #428040
