--- a/dev-ruby/ruby-poppler/ChangeLog
+++ b/dev-ruby/ruby-poppler/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-poppler
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-poppler/ChangeLog,v 1.42 2012/09/28 15:43:14 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-poppler/ChangeLog,v 1.43 2012/10/16 07:03:51 graaff Exp $
+
+*ruby-poppler-1.1.5 (16 Oct 2012)
+
+  16 Oct 2012; Hans de Graaff <graaff@gentoo.org> +ruby-poppler-1.1.5.ebuild:
+  Version bump.
 
   28 Sep 2012; Samuli Suominen <ssuominen@gentoo.org>
   ruby-poppler-1.1.3.ebuild:
