--- a/dev-ruby/ruby-vte/ChangeLog
+++ b/dev-ruby/ruby-vte/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-vte
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-vte/ChangeLog,v 1.36 2012/09/28 15:44:00 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-vte/ChangeLog,v 1.37 2012/10/16 07:17:54 graaff Exp $
+
+*ruby-vte-1.1.5 (16 Oct 2012)
+
+  16 Oct 2012; Hans de Graaff <graaff@gentoo.org> +ruby-vte-1.1.5.ebuild:
+  Version bump.
 
   28 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> ruby-vte-1.1.3.ebuild:
   ppc stable wrt #428040
