--- a/dev-ruby/ruby-gstreamer/ChangeLog
+++ b/dev-ruby/ruby-gstreamer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-gstreamer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gstreamer/ChangeLog,v 1.56 2012/10/16 07:00:04 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gstreamer/ChangeLog,v 1.57 2012/10/16 07:28:19 graaff Exp $
+
+  16 Oct 2012; Hans de Graaff <graaff@gentoo.org>
+  -ruby-gstreamer-0.19.4.ebuild:
+  Remove old version.
 
 *ruby-gstreamer-1.1.5 (16 Oct 2012)
 
