--- a/dev-ruby/ruby-gtk2/ChangeLog
+++ b/dev-ruby/ruby-gtk2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-gtk2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk2/ChangeLog,v 1.100 2012/10/16 06:53:31 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk2/ChangeLog,v 1.101 2012/10/16 07:27:31 graaff Exp $
+
+  16 Oct 2012; Hans de Graaff <graaff@gentoo.org> -ruby-gtk2-0.19.4.ebuild:
+  Remove old version.
 
 *ruby-gtk2-1.1.5 (16 Oct 2012)
 
