--- a/dev-ruby/ruby-poppler/ChangeLog
+++ b/dev-ruby/ruby-poppler/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-poppler
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-poppler/ChangeLog,v 1.43 2012/10/16 07:03:51 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-poppler/ChangeLog,v 1.44 2012/10/16 07:30:26 graaff Exp $
+
+  16 Oct 2012; Hans de Graaff <graaff@gentoo.org> -ruby-poppler-0.19.4.ebuild:
+  Remove old version.
 
 *ruby-poppler-1.1.5 (16 Oct 2012)
 
