--- a/dev-ruby/ruby-rsvg/ChangeLog
+++ b/dev-ruby/ruby-rsvg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-rsvg
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-rsvg/ChangeLog,v 1.41 2012/10/16 07:07:15 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-rsvg/ChangeLog,v 1.42 2012/10/16 07:29:58 graaff Exp $
+
+  16 Oct 2012; Hans de Graaff <graaff@gentoo.org> -ruby-rsvg-0.19.4.ebuild:
+  Remove old version.
 
 *ruby-rsvg-1.1.5 (16 Oct 2012)
 
