--- a/dev-ruby/ruby-vte/ChangeLog
+++ b/dev-ruby/ruby-vte/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-vte
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-vte/ChangeLog,v 1.37 2012/10/16 07:17:54 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-vte/ChangeLog,v 1.38 2012/10/16 07:29:38 graaff Exp $
+
+  16 Oct 2012; Hans de Graaff <graaff@gentoo.org> -ruby-vte-0.19.4.ebuild:
+  Remove old version.
 
 *ruby-vte-1.1.5 (16 Oct 2012)
 
