--- a/net-im/gajim/ChangeLog
+++ b/net-im/gajim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gajim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.156 2012/10/16 06:43:07 mattst88 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.157 2012/10/16 10:12:43 jlec Exp $
+
+  16 Oct 2012; Justin Lecher <jlec@gentoo.org> gajim-0.15.1.ebuild:
+  Fix for broken test, #434818
 
   16 Oct 2012; Matt Turner <mattst88@gentoo.org> gajim-0.15.1.ebuild:
   Stable on alpha, bug 427544.
