--- a/x11-wm/xpra/ChangeLog
+++ b/x11-wm/xpra/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/xpra
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.30 2012/10/14 23:48:34 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.31 2012/10/16 12:14:14 xmw Exp $
+
+  16 Oct 2012; Michael Weber <xmw@gentoo.org> xpra-0.7.0.ebuild:
+  Fix src_install (thanks Gary E. Miller, bug 438526)
 
   14 Oct 2012; Michael Weber <xmw@gentoo.org> xpra-0.7.0.ebuild:
   Fix README files and warn about Xorg permissions.
