--- a/x11-wm/xpra/ChangeLog
+++ b/x11-wm/xpra/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/xpra
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.31 2012/10/16 12:14:14 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.32 2012/10/16 12:51:17 xmw Exp $
+
+  16 Oct 2012; Michael Weber <xmw@gentoo.org> xpra-0.6.4.ebuild,
+  xpra-0.7.0.ebuild:
+  Fix patch location (thanks redneb, bug 438472), reestablish USE server
 
   16 Oct 2012; Michael Weber <xmw@gentoo.org> xpra-0.7.0.ebuild:
   Fix src_install (thanks Gary E. Miller, bug 438526)
