--- a/app-text/wv2/ChangeLog
+++ b/app-text/wv2/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-text/wv2
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/wv2/ChangeLog,v 1.65 2010/01/15 19:07:54 armin76 Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/wv2/ChangeLog,v 1.66 2012/10/16 14:37:47 kensington Exp $
+
+*wv2-0.4.2-r1 (16 Oct 2012)
+
+  16 Oct 2012; Michael Palimaka <kensington@gentoo.org> +wv2-0.4.2-r1.ebuild,
+  metadata.xml:
+  Add patch from upstream bugtracker to fix build with glib-2.32. Migrate to
+  EAPI 4. Add upstream metadata.
 
   15 Jan 2010; Raúl Porcel <armin76@gentoo.org> wv2-0.4.2.ebuild:
   alpha/ia64/sparc stable wrt #299156
@@ -241,4 +248,3 @@
 
   25 Feb 2003: Bart Verwilst <verwilst@gentoo.org> wv2-0.0.7.ebuild
   New version, initial ebuild in Portage
-
