--- a/profiles/arch/hppa/ChangeLog
+++ b/profiles/arch/hppa/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/hppa profile
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/hppa/ChangeLog,v 1.169 2012/10/16 15:57:00 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/hppa/ChangeLog,v 1.170 2012/10/16 15:58:45 jer Exp $
+
+  16 Oct 2012; Jeroen Roovers <jer@gentoo.org> use.mask:
+  Mask USE=realtime too (bug #438368).
 
   16 Oct 2012; Jeroen Roovers <jer@gentoo.org> use.mask:
   Mask USE=colord too (bug #438368).
