--- a/media-gfx/feh/ChangeLog
+++ b/media-gfx/feh/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/feh
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/feh/ChangeLog,v 1.114 2012/09/27 21:51:14 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/feh/ChangeLog,v 1.115 2012/10/16 16:15:38 radhermit Exp $
+
+*feh-2.7 (16 Oct 2012)
+
+  16 Oct 2012; Tim Harder <radhermit@gentoo.org> +feh-2.7.ebuild:
+  Version bump.
 
 *feh-2.6.3 (27 Sep 2012)
 
