--- a/media-gfx/feh/ChangeLog
+++ b/media-gfx/feh/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/feh
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/feh/ChangeLog,v 1.115 2012/10/16 16:15:38 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/feh/ChangeLog,v 1.116 2012/10/16 16:17:49 radhermit Exp $
+
+  16 Oct 2012; Tim Harder <radhermit@gentoo.org> -feh-2.6.ebuild,
+  -feh-2.6.1.ebuild, -feh-2.6.2.ebuild:
+  Remove old.
 
 *feh-2.7 (16 Oct 2012)
 
