--- a/dev-libs/qjson/ChangeLog
+++ b/dev-libs/qjson/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-libs/qjson
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/qjson/ChangeLog,v 1.22 2012/05/17 13:14:52 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/qjson/ChangeLog,v 1.23 2012/10/16 17:11:35 kensington Exp $
+
+*qjson-0.7.1_p20121016 (16 Oct 2012)
+
+  16 Oct 2012; Michael Palimaka <kensington@gentoo.org>
+  +qjson-0.7.1_p20121016.ebuild, metadata.xml:
+  Add snapshot to fix a serialization problem, wrt bug #428256. Add upstream
+  metadata.
 
   17 May 2012; Alexis Ballier <aballier@gentoo.org> qjson-0.7.1-r1.ebuild:
   keyword ~amd64-fbsd
@@ -87,4 +94,3 @@
   05 Aug 2009; Theo Chatzimichos <tampakrap@gentoo.org> +qjson-0.6.0.ebuild,
   +metadata.xml:
   Initial commit
-
