--- a/dev-libs/qjson/ChangeLog
+++ b/dev-libs/qjson/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/qjson
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/qjson/ChangeLog,v 1.23 2012/10/16 17:11:35 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/qjson/ChangeLog,v 1.24 2012/10/16 17:17:42 kensington Exp $
+
+  16 Oct 2012; Michael Palimaka <kensington@gentoo.org>
+  qjson-0.7.1_p20121016.ebuild:
+  Fix SRC_URI.
 
 *qjson-0.7.1_p20121016 (16 Oct 2012)
 
