--- a/sci-libs/umfpack/ChangeLog
+++ b/sci-libs/umfpack/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sci-libs/umfpack
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.30 2012/10/16 02:51:34 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/umfpack/ChangeLog,v 1.31 2012/10/16 19:17:03 jlec Exp $
+
+  16 Oct 2012; Justin Lecher <jlec@gentoo.org> umfpack-5.2.0.ebuild,
+  umfpack-5.5.1.ebuild, umfpack-5.5.2.ebuild:
+  Remove virtual/fortran and always call fortran-2_pkg_setup as intend by the
+  updated fortran-2.eclass
 
   16 Oct 2012;  <naota@gentoo.org> umfpack-5.5.2.ebuild:
   Add ~x86-fbsd.
