--- a/sci-libs/netcdf-fortran/ChangeLog
+++ b/sci-libs/netcdf-fortran/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sci-libs/netcdf-fortran
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/netcdf-fortran/ChangeLog,v 1.2 2012/08/02 21:16:24 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/netcdf-fortran/ChangeLog,v 1.3 2012/10/16 20:43:33 jlec Exp $
+
+  16 Oct 2012; Justin Lecher <jlec@gentoo.org> netcdf-fortran-4.2.ebuild,
+  metadata.xml:
+  Remove virtual/fortran and always call fortran-2_pkg_setup as intend by the
+  updated fortran-2.eclass
 
   02 Aug 2012; Sébastien Fabbro <bicatali@gentoo.org> netcdf-fortran-4.2.ebuild:
   Keyword amd64-linux x86-linux
