--- a/x11-themes/gnome-icon-theme/ChangeLog
+++ b/x11-themes/gnome-icon-theme/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gnome-icon-theme
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-icon-theme/ChangeLog,v 1.221 2012/10/16 04:56:35 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-icon-theme/ChangeLog,v 1.222 2012/10/16 21:45:05 tetromino Exp $
+
+  16 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  gnome-icon-theme-3.2.1.2.ebuild, gnome-icon-theme-3.4.0.ebuild:
+  Add workaround for people experiencing AM_INIT_AUTOMAKE version mismatch
+  error (bugs #438296, #432376). (The root cause is probably in
+  autotools.eclass - see bug #419933.)
 
   16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   gnome-icon-theme-3.4.0.ebuild:
