--- a/www-client/google-chrome/ChangeLog
+++ b/www-client/google-chrome/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for www-client/google-chrome
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.204 2012/10/10 20:44:27 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.205 2012/10/17 03:04:17 floppym Exp $
+
+*google-chrome-24.0.1297.0_alpha162078 (17 Oct 2012)
+
+  17 Oct 2012; Mike Gilbert <floppym@gentoo.org>
+  +google-chrome-24.0.1297.0_alpha162078.ebuild,
+  -google-chrome-24.0.1284.2_alpha159713.ebuild,
+  -google-chrome-24.0.1290.1_alpha160787.ebuild:
+  Dev channel bump.
 
 *google-chrome-23.0.1271.26_beta160934 (10 Oct 2012)
 *google-chrome-22.0.1229.94_p161065 (10 Oct 2012)
