--- a/net-nds/lat/ChangeLog
+++ b/net-nds/lat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-nds/lat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/lat/ChangeLog,v 1.12 2012/10/16 14:59:39 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/lat/ChangeLog,v 1.13 2012/10/17 03:17:23 phajdan.jr Exp $
+
+  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> lat-1.2.3.ebuild:
+  x86 stable wrt bug #436336
 
   16 Oct 2012; <ago@gentoo.org> lat-1.2.3.ebuild:
   Stable for amd64, wrt bug #436336
