--- a/app-text/rfcutil/ChangeLog
+++ b/app-text/rfcutil/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/rfcutil
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/rfcutil/ChangeLog,v 1.37 2012/10/10 15:32:18 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/rfcutil/ChangeLog,v 1.38 2012/10/17 03:20:00 phajdan.jr Exp $
+
+  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> rfcutil-3.2.3-r2.ebuild:
+  x86 stable wrt bug #437616
 
   10 Oct 2012; Brent Baude <ranger@gentoo.org> rfcutil-3.2.3-r2.ebuild:
   Marking rfcutil-3.2.3-r2 ppc for bug 437616
