--- a/media-sound/soundconverter/ChangeLog
+++ b/media-sound/soundconverter/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/soundconverter
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/soundconverter/ChangeLog,v 1.28 2012/07/06 00:16:35 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/soundconverter/ChangeLog,v 1.29 2012/10/17 03:24:15 phajdan.jr Exp $
+
+  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  soundconverter-2.0.3.ebuild:
+  x86 stable wrt bug #433317
 
 *soundconverter-2.0.3 (06 Jul 2012)
 
