--- a/net-misc/badvpn/ChangeLog
+++ b/net-misc/badvpn/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/badvpn
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/badvpn/ChangeLog,v 1.6 2012/09/22 18:08:04 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/badvpn/ChangeLog,v 1.7 2012/10/17 03:31:55 phajdan.jr Exp $
+
+  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  badvpn-1.999.123-r3.ebuild:
+  x86 stable wrt bug #435912
 
 *badvpn-1.999.123-r3 (22 Sep 2012)
 
