--- a/dev-python/pyatspi/ChangeLog
+++ b/dev-python/pyatspi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyatspi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyatspi/ChangeLog,v 1.12 2012/09/25 15:18:36 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyatspi/ChangeLog,v 1.13 2012/10/17 03:40:08 mattst88 Exp $
+
+  17 Oct 2012; Matt Turner <mattst88@gentoo.org> pyatspi-2.4.0.ebuild:
+  Added ~alpha, bug 411761.
 
 *pyatspi-2.6.0 (25 Sep 2012)
 
@@ -56,4 +59,3 @@
   19 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org> +pyatspi-2.0.2.ebuild,
   +metadata.xml:
   Move from gnome overlay for GNOME 3
-
