--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1124 2012/10/17 00:02:15 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1125 2012/10/17 04:33:14 zmedico Exp $
+
+*portage-2.1.11.29 (17 Oct 2012)
+
+  17 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.29.ebuild,
+  -portage-2.1.11.28.ebuild:
+  2.1.11.29 version bump. This fixes some cases where egencache --update-
+  manifests would unnecessarily re-signing manifests (for bug #436918), and also
+  fixes some cases where emerge --jobs would add jobs too slowly when --load-
+  average was enabled (for bug #438650). Bug #431026 tracks all bugs fixed since
+  portage-2.1.11.9.
 
 *portage-2.2.0_alpha139 (17 Oct 2012)
 
