--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1125 2012/10/17 04:33:14 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1126 2012/10/17 04:34:22 zmedico Exp $
+
+*portage-2.2.0_alpha140 (17 Oct 2012)
+
+  17 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha140.ebuild,
+  -portage-2.2.0_alpha139.ebuild:
+  2.2.0_alpha140 version bump. This includes all of the fixes in 2.1.11.29. Bug
+  #210077 tracks all bugs fixed since portage-2.1.x.
 
 *portage-2.1.11.29 (17 Oct 2012)
 
