--- a/dev-python/pyatspi/ChangeLog
+++ b/dev-python/pyatspi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyatspi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyatspi/ChangeLog,v 1.14 2012/10/17 04:29:54 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyatspi/ChangeLog,v 1.15 2012/10/17 04:34:27 mattst88 Exp $
+
+  17 Oct 2012; Matt Turner <mattst88@gentoo.org> pyatspi-2.6.0.ebuild:
+  Added ~alpha.
 
   17 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   pyatspi-2.2.1.ebuild, pyatspi-2.4.0.ebuild, pyatspi-2.6.0.ebuild:
