--- a/net-misc/goog-sitemapgen/ChangeLog
+++ b/net-misc/goog-sitemapgen/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/goog-sitemapgen
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/goog-sitemapgen/ChangeLog,v 1.14 2012/10/17 03:14:01 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/goog-sitemapgen/ChangeLog,v 1.15 2012/10/17 04:41:45 kensington Exp $
+
+  17 Oct 2012; Michael Palimaka <kensington@gentoo.org>
+  -files/goog-sitemapgen-1.4.patch, -goog-sitemapgen-1.4.ebuild:
+  Remove old.
 
   17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   goog-sitemapgen-1.5.ebuild:
