--- a/net-nds/lat/ChangeLog
+++ b/net-nds/lat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-nds/lat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/lat/ChangeLog,v 1.13 2012/10/17 03:17:23 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/lat/ChangeLog,v 1.14 2012/10/17 05:01:27 kensington Exp $
+
+  17 Oct 2012; Michael Palimaka <kensington@gentoo.org> -lat-1.2.2.ebuild:
+  Remove old.
 
   17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> lat-1.2.3.ebuild:
   x86 stable wrt bug #436336
@@ -87,4 +90,3 @@
   +metadata.xml:
   New ebuild for bug #86854, based on the original ebuild available on the
   project page.
-
