--- a/app-text/rfcutil/ChangeLog
+++ b/app-text/rfcutil/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/rfcutil
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/rfcutil/ChangeLog,v 1.38 2012/10/17 03:20:00 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/rfcutil/ChangeLog,v 1.39 2012/10/17 05:04:42 kensington Exp $
+
+  17 Oct 2012; Michael Palimaka <kensington@gentoo.org> -files/rfc-3.2.3.diff,
+  -rfcutil-3.2.3-r1.ebuild:
+  Remove old.
 
   17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> rfcutil-3.2.3-r2.ebuild:
   x86 stable wrt bug #437616
