--- a/net-misc/jigdo/ChangeLog
+++ b/net-misc/jigdo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/jigdo
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/jigdo/ChangeLog,v 1.31 2012/10/17 03:54:39 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/jigdo/ChangeLog,v 1.32 2012/10/17 05:12:43 kensington Exp $
+
+  17 Oct 2012; Michael Palimaka <kensington@gentoo.org> -jigdo-0.7.3-r1.ebuild:
+  Remove old.
 
   17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> jigdo-0.7.3-r2.ebuild:
   x86 stable wrt bug #435196
