--- a/dev-python/pyside/ChangeLog
+++ b/dev-python/pyside/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pyside
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/ChangeLog,v 1.42 2012/09/08 22:05:38 pesa Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyside/ChangeLog,v 1.43 2012/10/17 06:41:32 kensington Exp $
+
+  17 Oct 2012; Michael Palimaka <kensington@gentoo.org> pyside-1.1.1.ebuild,
+  pyside-1.1.2.ebuild:
+  Restrict python-3.3, wrt bug #438586.
 
 *pyside-1.1.2 (08 Sep 2012)
 
