--- a/app-text/fbreader/ChangeLog
+++ b/app-text/fbreader/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-text/fbreader
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/fbreader/ChangeLog,v 1.25 2012/09/04 11:18:36 alexxy Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/fbreader/ChangeLog,v 1.26 2012/10/17 08:15:36 kensington Exp $
+
+*fbreader-0.99.2 (17 Oct 2012)
+
+  17 Oct 2012; Michael Palimaka <kensington@gentoo.org> +fbreader-0.99.2.ebuild:
+  Version bump. This release drops support for GTK (bug #436490), fixes a build
+  failure (bug #417043) and respects CFLAGS (bug #438408).
 
 *fbreader-0.99.1 (04 Sep 2012)
 
