--- a/media-video/mplayer/ChangeLog
+++ b/media-video/mplayer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/mplayer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.857 2012/09/08 15:38:19 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.858 2012/10/17 11:06:32 ago Exp $
+
+  17 Oct 2012; Agostino Sarubbo <ago@gentoo.org> mplayer-1.1-r1.ebuild:
+  Stable for amd64, wrt bug #394809
 
   08 Sep 2012; Alexis Ballier <aballier@gentoo.org> files/dump_ffmpeg.sh:
   fix dump_ffmpeg script with latest ffmpeg git
